modules/gdscript/tests/scripts/analyzer/errors/nullable_narrowing.gd
func test():
    var foo: int? = 5
    if !foo:
        print(foo + 1) # Should error